--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -21,7 +21,7 @@
     "copyoutputs": "npx cpx \"./lib/**\" \"./dist/\"",
     "copyreadme": "npx cpx readme.md \"../webdocs/docs/fonts\"",
     "copyfonts": "npx cpx \"./lib/font/**\" \"../webdocs/src\"",
-    "prepublishOnly": "npx cpx package_dist.json \"./dist/package.json\" && npx cpx *.md \"./dist\""
+    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
   },
   "devDependencies": {
     "cpx2": "^7.0.1"
