--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -19,7 +19,8 @@
   "scripts": {
     "test": "node ./__tests__/react-library.test.js",
     "build": "npm run tsc",
-    "tsc": "tsc -p . --outDir ./dist"
+    "tsc": "tsc -p . --outDir ./dist",
+    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
   },
   "publishConfig": {
     "access": "public",
@@ -39,5 +40,5 @@
     "react-dom": "^18.2.0",
     "typescript": "5.4.5"
   },
-  "gitHead": "f885cd7eae07d9b2255fb83cdfb4972cb27a03c2"
+  "gitHead": "2da9a9827997f720d8e2a200b829bfa9d5b00ed7"
 }
