--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "test": "node ./__tests__/vue-lib.test.js",
     "build": "npm run tsc",
-    "tsc": "tsc -p . --outDir ./dist"
+    "tsc": "tsc -p . --outDir ./dist",
+    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
   },
   "dependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-13"
@@ -35,5 +36,5 @@
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-13",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-13"
   },
-  "gitHead": "f885cd7eae07d9b2255fb83cdfb4972cb27a03c2"
+  "gitHead": "2da9a9827997f720d8e2a200b829bfa9d5b00ed7"
 }
