--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -29,7 +29,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873/"
+    "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-13",
