cpx param changes

--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -15,7 +15,7 @@
   "private": false,
   "scripts": {
     "build": "ng-packagr -c tsconfig.json",
-    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
+    "prepublishOnly": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "typings": "index.d.ts",
   "exports": {
