--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -20,7 +20,7 @@
     "test": "node ./__tests__/react-library.test.js",
     "build": "npm run tsc",
     "tsc": "tsc -p . --outDir ./dist",
-    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
+    "prepublishOnly": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "publishConfig": {
     "access": "public",
