--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -20,9 +20,9 @@
     "build": "npm run generateIconModule && npm run copyoutputs && npm run copyicons && npm run copyreadme",
     "copyoutputs": "npx cpx \"./lib/**\" \"./dist/\" && npx cpx \"./svg/**\" \"./dist/svg\" && npx cpx \"./styles/**\" \"./dist/styles\"",
     "generateIconModule": "npx ts-node generator.ts",
-    "copyreadme": "npx cpx readme.md \"../webdocs/docs/icons\"",
+    "copyreadme": "npx cpx \"readme.md\" \"../webdocs/docs/icons\"",
     "copyicons": "npx cpx  \"./downloadoutput/**\" \"../webdocs/static/svg\"",
-    "prepublishOnly": "npx cpx *.md \"./dist\""
+    "prepublishOnly": "npx cpx \"./*.md\" \"./dist\""
   },
   "bugs": {
     "url": "https://github.com/innomotics/brand-experience/issues"
