--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -19,7 +19,7 @@
     "test": "node ./__tests__/vue-lib.test.js",
     "build": "npm run tsc",
     "tsc": "tsc -p . --outDir ./dist",
-    "prepublishOnly": "npx cpx ./lib/package.json ./dist && npx cpx *.md \"./dist\""
+    "prepublishOnly": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "dependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-13"
