adding artifact gen to build

--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -14,8 +14,8 @@
   ],
   "private": false,
   "scripts": {
-    "build": "ng-packagr -c tsconfig.json",
-    "prepublishOnly": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
+    "build": "ng-packagr -c tsconfig.json && npm run publishartifacts",
+    "publishartifacts": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "typings": "index.d.ts",
   "exports": {
