--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -17,12 +17,12 @@
     "url": "git+https://github.com/innomotics/brand-experience.git"
   },
   "scripts": {
-    "build": "npm run generateIconModule && npm run copyoutputs && npm run copyicons && npm run copyreadme",
+    "build": "npm run generateIconModule && npm run copyoutputs && npm run copyicons && npm run copyreadme && npm run publishartifacts",
     "copyoutputs": "npx cpx \"./lib/**\" \"./dist/\" && npx cpx \"./svg/**\" \"./dist/svg\" && npx cpx \"./styles/**\" \"./dist/styles\"",
     "generateIconModule": "npx ts-node generator.ts",
     "copyreadme": "npx cpx \"readme.md\" \"../webdocs/docs/icons\"",
     "copyicons": "npx cpx  \"./downloadoutput/**\" \"../webdocs/static/svg\"",
-    "prepublishOnly": "npx cpx \"./*.md\" \"./dist\""
+    "publishartifacts": "npx cpx \"./*.md\" \"./dist\""
   },
   "bugs": {
     "url": "https://github.com/innomotics/brand-experience/issues"
