--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -17,9 +17,9 @@
   ],
   "scripts": {
     "test": "node ./__tests__/vue-lib.test.js",
-    "build": "npm run tsc",
+    "build": "npm run tsc && npm run publishartifacts",
     "tsc": "tsc -p . --outDir ./dist",
-    "prepublishOnly": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
+    "publishartifacts": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "dependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-14"
