--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -31,7 +31,7 @@
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "stencil": "stencil",
-    "publishartifacts": "npx cpx \"./cjs/**\" \"./dist/cjs\" && npx cpx \"./collection/**\" \"./dist/collection\" && npx cpx \"./esm/**\" \"./dist/esm\" && npx cpx \"./innomotics-brand-experience/**\" \"./dist/innomotics-brand-experience\" && npx cpx \"./styles/**\" ./dist/styles && npx cpx \"./types/**\" \"./dist/types\" && npx cpx \"./loader/**\" \"./dist/loader\" && npx cpx \"./*.js\" \"./dist\" && npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
+    "publishartifacts": "npx cpx \"./cjs/**\" \"./dist/cjs\" && npx cpx \"./collection/**\" \"./dist/collection\" && npx cpx \"./esm/**\" \"./dist/esm\" && npx cpx \"./innomotics-brand-experience/**\" \"./dist/innomotics-brand-experience\" && npx cpx \"./styles/**\" \"./dist/styles\" && npx cpx \"./types/**\" \"./dist/types\" && npx cpx \"./loader/**\" \"./dist/loader\" && npx cpx \"./*.js\" \"./dist\" && npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.11",
