adjusting angular lib

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@ dist/
 .npmrc
 package-lock.json
 lerna-debug.log
-packages/icon-lib/downloadoutput/lime/innoicons_lime.zip
-packages/icon-lib/downloadoutput/powergrey/innoicons_powergrey.zip
-packages/icon-lib/downloadoutput/white/innoicons_white.zip
+packages/icon-lib/downloadoutput/
 packages/webdocs/static/svg/lime/innoicons_lime.zip
 packages/webdocs/static/svg/powergrey/innoicons_powergrey.zip
 packages/webdocs/static/svg/white/innoicons_white.zip
