--- a/packages/angular-lib/tsconfig.json
+++ b/packages/angular-lib/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "paths": {
       "components": [
-        "./dist"
+        "./lib"
       ]
     },
     "outDir": "./dist",
