--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -29,7 +29,8 @@
   },
   "devDependencies": {
     "cpx2": "^7.0.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   },
   "publishConfig": {
     "access": "public",
