--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -47,7 +47,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873//"
+    "registry": "https://registry.npmjs.org"
   },
   "gitHead": "8028f370259942960841efa6820cc62e01b9a688"
 }
