--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -29,8 +29,7 @@
   },
   "devDependencies": {
     "cpx2": "^7.0.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "ts-node": "^10.9.2"
   },
   "publishConfig": {
     "access": "public",
