--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-vue-lib",
-  "version": "0.0.2-beta-21",
+  "version": "0.0.2-beta-19",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -22,19 +22,19 @@
     "publishartifacts": "npx cpx \"./lib/package.json\" \"./dist\" && npx cpx \"./*.md\" \"./dist\""
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-19"
   },
   "devDependencies": {
     "vue": "3.4.25"
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873//"
+    "registry": "https://registry.npmjs.org"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-19",
+    "@innomotics/brand-experience-fonts": "^0.0.2-beta-19",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-19"
   },
   "gitHead": "1822534a8818dd0f162c03d6b2eb4f22bd8ba914"
 }
