--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-angular-lib",
-  "version": "0.0.2-beta-21",
+  "version": "0.0.2-beta-19",
   "description": "> TODO: description",
   "author": "",
   "types": "./index.d.ts",
@@ -31,7 +31,7 @@
     }
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-19"
   },
   "devDependencies": {
     "ng-packagr": "^17.3.0 || ^18.0.0"
@@ -40,14 +40,14 @@
     "@angular/common": "^17.3.5 || ^18.0.0",
     "@angular/core": "^17.3.5 || ^18.0.0",
     "@angular/forms": "^17.3.5 || ^18.0.0",
-    "@innomotics/brand-experience": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-21",
+    "@innomotics/brand-experience": "^0.0.2-beta-19",
+    "@innomotics/brand-experience-fonts": "^0.0.2-beta-19",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-19",
     "typescript": "5.4.5"
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873//"
+    "registry": "https://registry.npmjs.org"
   },
   "gitHead": "1822534a8818dd0f162c03d6b2eb4f22bd8ba914"
 }
