--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -49,15 +49,18 @@
     "access": "public",
     "registry": "http://localhost:4873"
   },
-  "gitHead": "1822534a8818dd0f162c03d6b2eb4f22bd8ba914",
+  "gitHead": "258791c1cbf11ee4ff207f0034abe74bcea86955",
   "copyFiles": [
     {
-      "from": ["./lib/package.json","./lib/*.md"],
+      "from": [
+        "./lib/package.json",
+        "./lib/*.md"
+      ],
       "to": "./dist"
     }
   ],
   "copyFilesSettings": {
     "ignoreDotFilesAndFolders": true,
-    "whenFileExists":"overwrite"
+    "whenFileExists": "overwrite"
   }
 }
