correcting copy blob

--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -92,9 +92,9 @@
         "!./src",
         "!./types",
         "!./www",
-        "!./**/*.*"
+        "!./*.*"
       ],
-      "to": "./kuka"
+      "to": "./dist"
     },
     {
       "from": "./lib/**",
