--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -25,7 +25,8 @@
     "jszip": "^3.10.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "simplebar": "^6.3.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.6.3",
