--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -15,9 +15,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.6.3",
-    "@docusaurus/preset-classic": "^3.6.3",
-    "@docusaurus/theme-mermaid": "^3.6.3",
+    "@docusaurus/core": "^3.7.0",
+    "@docusaurus/preset-classic": "^3.7.0",
+    "@docusaurus/theme-mermaid": "^3.7.0",
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-22",
     "@innomotics/brand-experience-react-lib": "^0.0.2-beta-22",
     "@mdx-js/react": "3.0.1",
@@ -26,12 +26,13 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sass": "^1.83.1",
     "simplebar": "^6.3.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^3.6.3",
-    "@docusaurus/tsconfig": "^3.6.3",
-    "@docusaurus/types": "^3.6.3",
+    "@docusaurus/module-type-aliases": "^3.7.0",
+    "@docusaurus/tsconfig": "^3.7.0",
+    "@docusaurus/types": "^3.7.0",
     "@types/react": "^18.2.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "5.4.5"
