--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -26,8 +26,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.83.1",
-    "simplebar": "^6.3.0"
+    "sass": "^1.83.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
