--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -32,7 +32,7 @@
     "@docusaurus/module-type-aliases": "^3.7.0",
     "@docusaurus/tsconfig": "^3.7.0",
     "@docusaurus/types": "^3.7.0",
-    "@types/react": "^18.2.0",
+    "@types/react": "18.2.64",
     "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "5.4.5"
   },
