--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ packages/icon-lib/downloadoutput/white/*.svg
 packages/icon-lib/downloadoutput/powergrey/*.zip
 packages/icon-lib/downloadoutput/lime/*.zip
 packages/icon-lib/downloadoutput/white/*.zip
+packages/angular-lib/lib/stencil-generated/
+packages/react-lib/lib/components/stencil-generated/
+packages/vue-lib/lib/components.ts
 packages/webdocs/static/svg/
 packages/stencil-lib/cjs/
 packages/stencil-lib/collection/
