--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-25"
+    "@innomotics/brand-experience": "0.0.2-beta-25"
   },
   "devDependencies": {
     "copy-files-from-to": "^3.12.0",
@@ -40,8 +40,8 @@
     "@angular/common": "^17.3.5 || ^18.0.0",
     "@angular/core": "^17.3.5 || ^18.0.0",
     "@angular/forms": "^17.3.5 || ^18.0.0",
-    "@innomotics/brand-experience": "^0.0.2-beta-25",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-25",
+    "@innomotics/brand-experience": "0.0.2-beta-25",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-25",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-25",
     "typescript": "5.4.5"
   },
