--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -32,15 +32,16 @@
     "stencil": "stencil"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.6.11",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-25",
+    "@floating-ui/dom": "^1.6.13",
+    "@iconify/tools": "^4.1.1",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-25",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-25",
-    "@stencil/core": "4.23.2",
+    "@stencil/core": "^4.24.0",
     "@stencil/sass": "^3.0.12",
     "animejs": "^3.2.2",
-    "luxon": "3.4.4",
+    "luxon": "^3.5.0",
     "resize-observer-polyfill": "^1.5.1",
-    "sanitize-html": "^2.13.0",
+    "sanitize-html": "^2.14.0",
     "simplebar": "^6.2.6"
   },
   "devDependencies": {
@@ -48,8 +49,7 @@
     "@stencil/angular-output-target": "0.10.2",
     "@stencil/react-output-target": "0.8.2",
     "@stencil/vue-output-target": "0.9.2",
-    "@types/autoprefixer": "^10.2.0",
-    "@types/jest": "^29.5.6",
+    "@types/jest": "^29.5.14",
     "@types/luxon": "^3.4.2",
     "@types/node": "^16.18.11",
     "@types/sanitize-html": "^2.11.0",
@@ -57,10 +57,10 @@
     "copy-files-from-to": "^3.12.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
-    "puppeteer": "^21.9.0"
+    "puppeteer": "^24.1.0"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-25",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-25",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-25"
   },
   "license": "MIT",
