--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -21,19 +21,19 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-25"
+    "@innomotics/brand-experience": "0.0.2-beta-25",
+    "vue": "3.4.25"
   },
   "devDependencies": {
-    "copy-files-from-to": "^3.12.0",
-    "vue": "3.4.25"
+    "copy-files-from-to": "^3.12.0"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-25",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-25",
+    "@innomotics/brand-experience": "0.0.2-beta-25",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-25",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-25"
   },
   "gitHead": "258791c1cbf11ee4ff207f0034abe74bcea86955",
