--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ packages/stencil-lib/utils/
 packages/icon-lib/downloadoutput/lime/innoicons_lime.zip
 packages/icon-lib/downloadoutput/powergrey/innoicons_powergrey.zip
 packages/icon-lib/downloadoutput/white/innoicons_white.zip
+packages/icon-lib/inno-icons.ts
 packages/webdocs/static/svg/lime/innoicons_lime.zip
 packages/webdocs/static/svg/powergrey/innoicons_powergrey.zip
 packages/webdocs/static/svg/white/innoicons_white.zip
