--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-icons",
-  "version": "0.0.2-beta-30",
+  "version": "0.0.2-beta-31",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "https://github.com/innomotics/brand-experience#readme",
@@ -65,7 +65,7 @@
     },
     {
       "from": [
-        ".bicolor/readme.md"
+        "./bicolor/readme.md"
       ],
       "to": "../webdocs/docs/icons/bicolor"
     }
