--- a/packages/fonts/lib/package.json
+++ b/packages/fonts/lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-fonts",
-  "version": "0.0.2-beta-32",
+  "version": "0.0.2-beta-34",
   "description": "> TODO: description",
   "author": "@innomotics",
   "homepage": "",
@@ -14,6 +14,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/innomotics/brand-experience"
+    "url": "https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience"
   }
 }
