--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@innomotics/brand-experience-icons",
-  "version": "0.0.2-beta-32",
+  "version": "0.0.2-beta-34",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
-  "homepage": "https://github.com/innomotics/brand-experience#readme",
+  "homepage": "https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience#readme",
   "license": "MIT",
   "private": false,
   "directories": {
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/innomotics/brand-experience.git"
+    "url": "git+https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience.git"
   },
   "scripts": {
     "build": "npm run generateIconModule && npm run generateBicolorIconModule && npx copy-files-from-to",
@@ -22,15 +22,14 @@
     "generateBicolorIconModule": "npx ts-node bicoloricongenerator.ts"
   },
   "bugs": {
-    "url": "https://github.com/innomotics/brand-experience/issues"
+    "url": "https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience/-/issues"
   },
   "devDependencies": {
     "copy-files-from-to": "^3.12.0",
     "ts-node": "^10.9.2"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "dependencies": {
     "@iconify/tools": "^4.0.7",
