--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-react-lib",
-  "version": "0.0.2-beta-32",
+  "version": "0.0.2-beta-34",
   "description": "> TODO: description",
   "author": "",
   "homepage": "",
@@ -22,16 +22,15 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "dependencies": {
-    "@innomotics/brand-experience": "0.0.2-beta-32"
+    "@innomotics/brand-experience": "0.0.2-beta-34"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience": "0.0.2-beta-32",
-    "@innomotics/brand-experience-fonts": "0.0.2-beta-32",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-27"
+    "@innomotics/brand-experience": "0.0.2-beta-34",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-34",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-34"
   },
   "devDependencies": {
     "@types/react": "18.3.12",
