--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-vue-lib",
-  "version": "0.0.2-beta-32",
+  "version": "0.0.2-beta-34",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -21,20 +21,19 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "dependencies": {
-    "@innomotics/brand-experience": "0.0.2-beta-32",
+    "@innomotics/brand-experience": "0.0.2-beta-34",
     "vue": "3.4.25"
   },
   "devDependencies": {
     "copy-files-from-to": "^3.12.0"
   },
   "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience": "0.0.2-beta-32",
-    "@innomotics/brand-experience-fonts": "0.0.2-beta-32",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-27"
+    "@innomotics/brand-experience": "0.0.2-beta-34",
+    "@innomotics/brand-experience-fonts": "0.0.2-beta-34",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-34"
   },
   "gitHead": "258791c1cbf11ee4ff207f0034abe74bcea86955",
   "copyFiles": [
