--- a/packages/fonts/lib/package.json
+++ b/packages/fonts/lib/package.json
@@ -14,6 +14,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience"
+    "url": ""
   }
 }
