--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://devops.alm.innomotics.net/in/innomotics-brand-experience/brand-experience"
+    "url": ""
   },
   "scripts": {
     "build": "npx copy-files-from-to"
